--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	
-	<link rel="stylesheet" href="css/inicio.css"><!--archive.css-->
+	<link rel="stylesheet" href="inicio.css"><!--archive.css-->
 
 	<title>Inicio</title><!--titulo-->
     
