--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	
-	<link rel="stylesheet" href="css/portfolio.css"><!--archive.css-->
+	<link rel="stylesheet" href="portfolio.css"><!--archive.css-->
 
 	<title>Portfólio</title><!--titulo-->
     
