--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	
-	<link rel="stylesheet" href="css/sobre.css"><!--archive.css-->
+	<link rel="stylesheet" href="sobre.css"><!--archive.css-->
 
 	<title>Sobre</title><!--titulo-->
     
