--- a/contato.html
+++ b/contato.html
@@ -14,13 +14,17 @@
 
     <form>
       <label for="nome">Nome:</label>
+      <!--input nome-->
       <input type="text" id="nome" name="nome" required>
-
+      
+      <!---->
       <label for="email">Email:</label>
+      <!--input email-->
       <input type="email" id="email" name="email" required>
-
+      
       <label for="mensagem">Mensagem:</label>
-      <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+      <!--input menssagem-->
+      <input id="mensagem" name="mensagem" rows="5" required>
 
       <button type="submit">Enviar</button>
     </form>    
