--- a/formacao.html
+++ b/formacao.html
@@ -20,6 +20,7 @@
         <h2>Idiomas</h2>
         <p>Inglês: Interpretaçao : Ler, Se espressar: Falar e Escrever  .</p>
 
+        <!--link pagina inicial-->
         <a href="index.html">Voltar a Tela Inicial</a>
 
 	</body>
