--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 </head>
 	<body>
 
+        <!--cabeçalho-->
         <h1>CV Lucas dos Anjos Stawicki</h1>
-            <ul>
+        <ul>
+                <!--link sobre-->
                 <li><a href="sobre.html">Sobre Mim</a></li>
+                <!--link fomrações-->
                 <li><a href="formacao.html">Formação</a></li>
+                <!--link portfolio-->
                 <li><a href="portfolio.html">Portfólio</a></li>
+                <!--link contato-->
                 <li><a href="contato.html">Contato</a></li>
             </ul>
 	</body>
