--- a/portfolio.html
+++ b/portfolio.html
@@ -10,16 +10,21 @@
 </head>
 	<body>
 
+        <!--cabeçalho-->
         <h1>Portfólio</h1>
 
+        <!--sub titulo-->
         <h2>Cardápio</h2>
 
+        <!--link portifoio projeto cardápio-->
         <a href="https://github.com/LOPIKU7/Trabalho---Card-pio">Cardápio</a>
 
         <h2>Perfil GitHub</h2>
 
+        <!--link portifoio completo-->
         <a href="https://github.com/LOPIKU7">Portfólio Completo</a><br><br>
 
+        <!--link pagina inicial-->
         <a href="index.html">Voltar a Tela Inicial</a>
 
 	</body>
